# copernicus_simulation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch  simulation.launch
