<?xml version="1.0"?>
<package format="2">
  <name>copernicus_simulation</name>
  <version>1.0.0</version>
  <description>The copernicus_simulation package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>
  
  <license>BSD-3-Clause</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>velodyne_gazebo_plugins</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>velodyne_description</build_depend>
  <exec_depend>copernicus_description</exec_depend>
  <exec_depend>copernicus_control</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>

  <export>
  </export>
</package>
